Add repair strategy to filters, pass 4

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -1,5 +1,5 @@
 # Spanish internationalization file for Syllable Parser
-# Copyright (c) 2016-2019 SIL International
+# Copyright (c) 2016-2020 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -429,6 +429,7 @@ templatefiltersyntaxerror.missing_closing_paren=Falta un paréntesis de cierre; d
 templatefiltersyntaxerror.missing_closing_square_bracket=Falta un corchete de cierre; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_opening_paren=Falta un paréntesis de apertura; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.missing_opening_square_bracket=Falta un corchete de apertura; detectado en o alrededor de la posición {0}.
+templatefiltersyntaxerror.required_slot_position_indicator=Un indicador de posición de la ranura | es obligatorio cuando se usa la acción Reparar. Por favor, agrega uno.
 templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=El indicador de posición de la ranura | necesita ser seguido por un segmento o una clase.
 templatefiltersyntaxerror.unknown=Error desconocido en la descripción de plantilla o filtro; detectado en o sobre la posición {0}.
 templatefiltersyntaxerror.unknownsegment=Segmento no reconocido que comienza en '{0}' en la descripción de la plantilla o del filtro.
