--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -1,5 +1,5 @@
 # French internationalization file for Syllable Parser
-# Copyright (c) 2016-2019 SIL International
+# Copyright (c) 2016-2020 SIL International
 # This software is licensed under the LGPL, version 2.1 or later 
 # (http://www.gnu.org/licenses/lgpl-2.1.html) 
 program.name=Asheninka
@@ -432,6 +432,7 @@ templatefiltersyntaxerror.missing_closing_paren=A closing parenthesis is missing
 templatefiltersyntaxerror.missing_closing_square_bracket=A closing square bracket is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_opening_paren=An opening parenthesis is missing; detected at or about position {0}.
 templatefiltersyntaxerror.missing_opening_square_bracket=An opening square bracket is missing; detected at or about position {0}.
+templatefiltersyntaxerror.required_slot_position_indicator=One slot position indicator | is required when using the Repair action.  Please add one.
 templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=The slot position indicator | needs to be followed by a segment or a class.
 templatefiltersyntaxerror.unknown=Unknown error in template or filter description; detected at or about position {0}.
 templatefiltersyntaxerror.unknownsegment=Unrecognized segment beginning at '{0}' in template or filter description.
