Require a term before and after slot position in filter grammar

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -430,6 +430,7 @@ templatefiltersyntaxerror.missing_opening_paren=Falta un paréntesis de apertura;
 templatefiltersyntaxerror.missing_opening_square_bracket=Falta un corchete de apertura; detectado en o alrededor de la posición {0}.
 templatefiltersyntaxerror.required_slot_position_indicator=Un indicador de posición de la ranura | es obligatorio cuando se usa la acción Reparar. Por favor, agrega uno.
 templatefiltersyntaxerror.slot_position_needs_segment_or_class_after_it=El indicador de posición de la ranura | necesita ser seguido por un segmento o una clase.
+templatefiltersyntaxerror.slot_position_needs_segment_or_class_before_it=El indicador de posición de la ranura | necesita tener al menos un segmento o clase antes.
 templatefiltersyntaxerror.unknown=Error desconocido en la descripción de plantilla o filtro; detectado en o sobre la posición {0}.
 templatefiltersyntaxerror.unknownsegment=Segmento no reconocido que comienza en '{0}' en la descripción de la plantilla o del filtro.
 templatefiltersyntaxerror.unknownnaturalclass=Clase natural no reconocida '{0}' en la descripción de la plantilla o del filtro.
