Add processing of 'fail' filters

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -258,17 +258,22 @@ label.oncstiaddedasnucleus=Segmento 1 agregado como núcleo.
 label.oncstiaddedasonset=Se agregó el segmento 1 como onset.
 label.oncstiaddingfinalsyllabletoword=Agregó la última sílaba a la palabra.
 label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
+label.oncsticodafilterfailed=Un filtro de coda falló: {0}
 label.oncstiexpectednucleusnotfound=Se esperaba que el segmento 1 fuera un núcleo, pero no lo era.
 label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y, además, no se permiten las codas; así comenzó una nueva sílaba.
 label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y no era una coda; Así comenzó una nueva sílaba.
 label.oncstiexpectedonsetornucleusnotfound=Se esperaba que el segmento 1 fuera un onset o un núcleo, pero no era ninguno de los dos.
 label.oncstinaturalclassnotfoundforsegment=No encontré una clase natural para el segmento.
+label.oncstinucleusfilterfailed=Un filtro de núcleo falló: {0}
+label.oncstionsetfilterfailed=Un filtro de inicio falló: {0}
 label.oncstionsetrequiredbutsegmentnotanonset=Se requieren onsets pero el segmento 1 no fue un onset.
+label.oncstirimefilterfailed=Un filtro de rime falló: {0}
 label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=El segmento 1 puede ser una coda o un onset, pero la Maximización de onset lo bloquea para que no sea una coda; comenzó una nueva sílaba.
 label.oncstisegmentiscodaoronsetbutonsetsrequiredandnextnotonsetstartnewsyllable=El segmento 1 podría ser un coda o un onset, pero se requieren inicios y el segmento 2 no es un onset; comenzó una nueva sílaba.
 label.oncstisegmenttriedasonsetbutnotanonset=Se intentó el segmento 1 como un onset, pero no fue un onset.
 label.oncstisegmenttriedasonsetbutsonorityblocksitasanonset=Se intentó el segmento 1 como un onset, pero la jerarquía de sonoridad lo bloquea como un onset.
 label.oncstisuccess=Éxito.
+label.oncstisyllablefilterfailed=Un filtro de sílaba falló: {0}
 label.oncstiunknown=
 # ONC Syllabification ONC type
 label.onctypecoda=coda
