Add nucleus template

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -266,6 +266,8 @@ label.oncstiexpectedonsetornucleusnotfound=Expected segment 1 to be either an on
 label.oncstinaturalclassnotfoundforsegment=Did not find a natural class for the segment.
 label.oncstinucleusfilterfailed=A nucleus filter failed: {0}
 label.oncstinucleusrepairnotapply=A nucleus repair filter could not apply: {0}
+label.oncstinucleustemplateblocksadding=No nucleus template applies while trying to add another segment to this nucleus; started a new syllable
+label.oncstinucleustemplatesallfail=No nucleus templates match
 label.oncstionsetfilterfailed=An onset filter failed: {0}
 label.oncstionsetrepairapplied=An onset repair filter applied: {0}
 label.oncstionsetrepairnotapplynoprevioussyllable=An onset repair filter could not apply because there is no previous syllable: {0}
