--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -267,6 +267,8 @@ label.oncstiexpectedonsetornucleusnotfound=Se esperaba que el segmento 1 fuera u
 label.oncstinaturalclassnotfoundforsegment=No encontré una clase natural para el segmento.
 label.oncstinucleusfilterfailed=Un filtro de núcleo falló: {0}
 label.oncstinucleusrepairnotapply=No se pudo aplicar un filtro de reparación de núcleo: {0}
+label.oncstinucleustemplateblocksadding=No se aplica ninguna plantilla de núcleo al intentar agregar otro segmento a este núcleo; comenzó una nueva sílaba
+label.oncstinucleustemplatesallfail=No coinciden las plantillas de núcleo
 label.oncstionsetfilterfailed=Un filtro de inicio falló: {0}
 label.oncstionsetrepairapplied=Se aplicó un filtro de reparación de inicio: {0}
 label.oncstionsetrepairnotapplynoprevioussyllable=No se pudo aplicar un filtro de reparación de inicio porque no hay una sílaba previa: {0}
