--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -285,16 +285,17 @@ label.oncstisuccess=Éxito.
 label.oncstisyllablefilterfailed=Un filtro de sílaba falló: {0}
 label.oncstisyllablerepairnotapply=No se pudo aplicar un filtro de reparación de sílabas: {0}
 label.oncstiunknown=
-# ONC Syllabification ONC type
-label.onctypecoda=coda
-label.onctypecodaoronset=coda o onset
-label.onctypefilterfailed=filtro fallido
-label.onctypefilterrepairapplied=filtro aplicado
-label.onctypenucleus=núcleo
-label.onctypenucleusorcoda=núcleo o coda
-label.onctypeonset=onset
-label.onctypeonsetornucleus=onset o núcleo
-label.onctypeunknown=
+# ONC Syllabification state
+label.oncstatecoda=coda
+label.oncstatecodaoronset=coda o onset
+label.oncstatefilterfailed=filtro fallido
+label.oncstatefilterrepairapplied=filtro aplicado
+label.oncstatenucleus=núcleo
+label.oncstatenucleusorcoda=núcleo o coda
+label.oncstateonset=onset
+label.oncstateonsetornucleus=onset o núcleo
+label.oncstatetemplatefailed=plantilla fallida
+label.oncstateunknown=
 
 # file loading/saving
 file.error=Error
