--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -287,16 +287,17 @@ label.oncstisuccess=Success.
 label.oncstisyllablefilterfailed=A syllable filter failed: {0}
 label.oncstisyllablerepairnotapply=A syllable repair filter could not apply: {0}
 label.oncstiunknown=
-# ONC Syllabification ONC type
-label.onctypecoda=coda
-label.onctypecodaoronset=coda or onset
-label.onctypefilterfailed=filter failed
-label.onctypefilterrepairapplied=filter applied
-label.onctypenucleus=nucleus
-label.onctypenucleusorcoda=nucleus or coda
-label.onctypeonset=onset
-label.onctypeonsetornucleus=onset or nucleus
-label.onctypeunknown=
+# ONC Syllabification state
+label.oncstatecoda=coda
+label.oncstatecodaoronset=coda or onset
+label.oncstatefilterfailed=filter failed
+label.oncstatefilterrepairapplied=filter applied
+label.oncstatenucleus=nucleus
+label.oncstatenucleusorcoda=nucleus or coda
+label.oncstateonset=onset
+label.oncstateonsetornucleus=onset or nucleus
+label.oncstatetemplatefailed=template failed
+label.oncstateunknown=
 
 # file loading/saving
 file.error=Erreur
