Improve tracing of nucleus template matching

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -268,6 +268,8 @@ label.oncstinaturalclassnotfoundforsegment=No encontré una clase natural para el
 label.oncstinucleusfilterfailed=Un filtro de núcleo falló: {0}
 label.oncstinucleusrepairnotapply=No se pudo aplicar un filtro de reparación de núcleo: {0}
 label.oncstinucleustemplateblocksadding=No se aplica ninguna plantilla de núcleo al intentar agregar otro segmento a este núcleo; comenzó una nueva sílaba
+label.oncstinucleustemplateblocksaddingonsetrequiredbutwontbeone=No se aplica ninguna plantilla de núcleo al intentar agregar un núcleo a esta sílaba; no puede crear una nueva sílaba porque se requerirá un inicio pero no habría una
+label.oncstinucleustemplatematched=Una plantilla de núcleo coincidente: {0}
 label.oncstinucleustemplatesallfail=No coinciden las plantillas de núcleo
 label.oncstionsetfilterfailed=Un filtro de inicio falló: {0}
 label.oncstionsetrepairapplied=Se aplicó un filtro de reparación de inicio: {0}
