Add comment field to words

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -213,6 +213,7 @@ label.tryit=Try it
 label.untested=Untested
 label.word=Word
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
+label.comment=Comment
 label.words=Words
 label.wordtofind=Word to find: 
 label.wordtotry=Word to try: 
