--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -167,6 +167,7 @@ label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
 label.word=Palabra
 label.words=Palabras
+label.comment=Commentario
 label.predictedsyllabification=Silabificación Predicada
 label.correctsyllabification=Silabificación Correcta
 label.discussion=Discussión
