--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -213,6 +213,7 @@ label.tryit=Essayer
 label.untested=Pas vérifié
 label.word=Mot
 label.wordpredictedvscorrect=Syllabification prédite versus syllabification correcte
+label.comment=Comment
 label.words=Mots
 label.wordtofind=Mot à trouver: 
 label.wordtotry=Mot essayer: 
