Add word final template

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -257,6 +257,7 @@ label.oncstiaddedascoda=Se agregó el segmento 1 como una coda.
 label.oncstiaddedascodastartnewsyllable=Se agregó el segmento 1 como coda y comenzó una nueva sílaba.
 label.oncstiaddedasnucleus=Segmento 1 agregado como núcleo.
 label.oncstiaddedasonset=Se agregó el segmento 1 como onset.
+label.oncstiaddedaswordfinalappendix=Se agregó el segmento 1 al apéndice final de la palabra usando la plantilla: {0}.
 label.oncstiaddingfinalsyllabletoword=Agregó la última sílaba a la palabra.
 label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
 label.oncsticodafilterfailed=Un filtro de coda falló: {0}
