--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -259,6 +259,7 @@ label.oncstiaddedascoda=Added segment 1 as a coda.
 label.oncstiaddedascodastartnewsyllable=Added segment 1 as a coda and started a new syllable.
 label.oncstiaddedasnucleus=Added segment 1 as a nucleus.
 label.oncstiaddedasonset=Added segment 1 as an onset.
+label.oncstiaddedaswordfinalappendix=Added segment 1 to the word final appendix using template: {0}.
 label.oncstiaddingfinalsyllabletoword=Added the final syllable to the word.
 label.oncstiaddingsyllabletoword=Added the syllable to the word.
 label.oncsticodafilterfailed=A coda filter failed: {0}
