Add ability to move to previous or next item in a table Refactor handleInsertNewItem() and handleRemoveItem() Move position of comment field in word displays to after the word Add a colun for comment in word displays

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -35,6 +35,8 @@ menu.copy=_Copiar
 menu.paste=_Pegar
 menu.insertnew=_Nueva Ítem
 menu.remove=_Remover Ítem
+menu.nextitem=Ítem proximo
+menu.previousitem=Ítem anterior
 #menu.language=_Lengua
 menu.vernacularfont=Fuente _Vernacular
 menu.analysisfont=Fuente _Analítica
