--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -35,6 +35,8 @@ menu.copy=_Copier
 menu.paste=_Coller
 menu.insertnew=_Nouveau point
 menu.remove=_Supprimer point
+menu.nextitem=Ne_xt item
+menu.previousitem=Pre_vious item
 #menu.language=_Language
 menu.vernacularfont=Police _vernaculaire
 menu.analysisfont=Police d\u2019_analyse
