Add onset template to syllabifier

--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -283,6 +283,7 @@ label.oncstionsetrepairnotapplynoprevioussyllable=An onset repair filter could n
 label.oncstionsetrepairnotapplynotgoinprevioussyllable=An onset repair filter could not apply because it could not go in the previous syllable: {0}
 label.oncstionsetrepairnotapplyonsetrequiredbutwontbeone=An onset repair filter could not apply because an onset will be required but there would not be one: {0}
 label.oncstionsetrequiredbutsegmentnotanonset=Onsets are required but segment 1 was not an onset.
+label.oncstionsettemplateapplied=An onset template applied: {0}
 label.oncstirimefilterfailed=A rime filter failed: {0}
 label.oncstirimerepairnotapply=A rime repair filter could not apply: {0}
 label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=Segment 1 could be either a coda or an onset, but Onset Maximization blocks it from being a coda; started a new syllable.
