Add filters and templates to comparisons for ONC approach Refactor CVNaturalClasses so use common code for CV and ONC comparisons

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -397,6 +397,14 @@ report.samecodasallowed=Codas permitidas son las mismas.
 report.codasalloweddiffers=Codas permitidas son diferentes.
 report.onsetmaximizationdiffers=La maximización de inicio es diferente.
 report.onsetprinciplediffers=El principio de inicio es diferente.
+report.filters=Filtros
+report.samefilters=Ambos tienen los mismos filtros.
+report.filterswhichdiffer=Los siguientes filtros difieren entre los dos. 
+report.filterinorder=El orden de los filtros se muestra a continuación.
+report.templates=Plantillas
+report.sametemplates=Ambos tienen las mismas plantillas.
+report.templateswhichdiffer=Las siguientes plantillas difieren entre las dos. 
+report.templateinorder=El orden de las plantillas se muestra a continuación.
 # Try a Word
 report.tawtitle=Silabación de {0}
 report.tawsegments=Analizando en segmentos
