Add coda repair filters

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -262,6 +262,7 @@ label.oncstiaddedasonset=Se agregó el segmento 1 como onset.
 label.oncstiaddedaswordfinalappendix=Se agregó el segmento 1 al apéndice final de la palabra usando la plantilla: {0}.
 label.oncstiaddingfinalsyllabletoword=Agregó la última sílaba a la palabra.
 label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
+label.oncsticodarepairapplied=Se aplicó un filtro de reparación de coda: {0}
 label.oncsticodafilterfailed=Un filtro de coda falló: {0}
 label.oncsticodarepairnotapply=No se pudo aplicar un filtro de reparación coda: {0}
 label.oncstiexpectednucleusnotfound=Se esperaba que el segmento 1 fuera un núcleo, pero no lo era.
