Add word initial template processing

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -260,6 +260,7 @@ label.oncstiaddedascodastartnewsyllable=Se agregó el segmento 1 como coda y come
 label.oncstiaddedasnucleus=Segmento 1 agregado como núcleo.
 label.oncstiaddedasonset=Se agregó el segmento 1 como onset.
 label.oncstiaddedaswordfinalappendix=Se agregó el segmento 1 al apéndice final de la palabra usando la plantilla: {0}.
+label.oncstiaddedaswordinitialappendix=Se agregó el segmento 1 al apéndice inicial de la palabra usando la plantilla: {0}.
 label.oncstiaddingfinalsyllabletoword=Agregó la última sílaba a la palabra.
 label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
 label.oncsticodarepairapplied=Se aplicó un filtro de reparación de coda: {0}
@@ -270,6 +271,7 @@ label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable
 label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y no era una coda; Así comenzó una nueva sílaba.
 label.oncstiexpectedonsetornucleusnotfound=Se esperaba que el segmento 1 fuera un onset o un núcleo, pero no era ninguno de los dos.
 label.oncstinaturalclassnotfoundforsegment=No encontré una clase natural para el segmento.
+label.oncstinowordinitialtemplatematched=Ninguna plantilla inicial de la palabra coincide.
 label.oncstinucleusfilterfailed=Un filtro de núcleo falló: {0}
 label.oncstinucleusrepairnotapply=No se pudo aplicar un filtro de reparación de núcleo: {0}
 label.oncstinucleustemplateblocksadding=No se aplica ninguna plantilla de núcleo al intentar agregar otro segmento a este núcleo; comenzó una nueva sílaba
@@ -290,6 +292,7 @@ label.oncstisegmentiscodaoronsetbutonsetsrequiredandnextnotonsetstartnewsyllable
 label.oncstisegmenttriedasonsetbutnotanonset=Se intentó el segmento 1 como un onset, pero no fue un onset.
 label.oncstisegmenttriedasonsetbutsonorityblocksitasanonset=Se intentó el segmento 1 como un onset, pero la jerarquía de sonoridad lo bloquea como un onset.
 label.oncstisuccess=Éxito.
+label.oncstisyllabificationoffirstsyllablefailedtryingwordinitialtemplates=La silabificación de la primera sílaba falló; tratando de plantillas iniciales de palabras.
 label.oncstisyllablefilterfailed=Un filtro de sílaba falló: {0}
 label.oncstisyllablerepairnotapply=No se pudo aplicar un filtro de reparación de sílabas: {0}
 label.oncstiunknown=
