--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -262,6 +262,7 @@ label.oncstiaddedascodastartnewsyllable=Added segment 1 as a coda and started a 
 label.oncstiaddedasnucleus=Added segment 1 as a nucleus.
 label.oncstiaddedasonset=Added segment 1 as an onset.
 label.oncstiaddedaswordfinalappendix=Added segment 1 to the word final appendix using template: {0}.
+label.oncstiaddedaswordinitialappendix=Added segment 1 to the word initial appendix using template: {0}.
 label.oncstiaddingfinalsyllabletoword=Added the final syllable to the word.
 label.oncstiaddingsyllabletoword=Added the syllable to the word.
 label.oncsticodafilterfailed=A coda filter failed: {0}
@@ -272,6 +273,7 @@ label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable
 label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Expected segment 1 to be either a nucleus or a coda, but it was not a nucleus and was not a coda; so started a new syllable.
 label.oncstiexpectedonsetornucleusnotfound=Expected segment 1 to be either an onset or a nucleus but it was neither.
 label.oncstinaturalclassnotfoundforsegment=Did not find a natural class for the segment.
+label.oncstinowordinitialtemplatematched=No word initial template matched.
 label.oncstinucleusfilterfailed=A nucleus filter failed: {0}
 label.oncstinucleusrepairnotapply=A nucleus repair filter could not apply: {0}
 label.oncstinucleustemplateblocksadding=No nucleus template applies while trying to add another segment to this nucleus; started a new syllable
@@ -292,6 +294,7 @@ label.oncstisegmentiscodaoronsetbutonsetsrequiredandnextnotonsetstartnewsyllable
 label.oncstisegmenttriedasonsetbutnotanonset=Tried segment 1 as an onset, but it was not an onset.
 label.oncstisegmenttriedasonsetbutsonorityblocksitasanonset=Tried segment 1 as an onset, but the sonority hierarchy blocks it as an onset.
 label.oncstisuccess=Success.
+label.oncstisyllabificationoffirstsyllablefailedtryingwordinitialtemplates=Syllabification of the first syllable failed; trying word initial templates.
 label.oncstisyllablefilterfailed=A syllable filter failed: {0}
 label.oncstisyllablerepairnotapply=A syllable repair filter could not apply: {0}
 label.oncstiunknown=
