Add coda template Improve word final template processing

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -266,6 +266,7 @@ label.oncstiaddingsyllabletoword=Agregó la sílaba a la palabra.
 label.oncsticodarepairapplied=Se aplicó un filtro de reparación de coda: {0}
 label.oncsticodafilterfailed=Un filtro de coda falló: {0}
 label.oncsticodarepairnotapply=No se pudo aplicar un filtro de reparación coda: {0}
+label.oncsticodatemplatematched=Una plantilla de coda coincidente: {0}
 label.oncstiexpectednucleusnotfound=Se esperaba que el segmento 1 fuera un núcleo, pero no lo era.
 label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y, además, no se permiten las codas; así comenzó una nueva sílaba.
 label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Se esperaba que el segmento 1 fuera un núcleo o una coda, pero no era un núcleo y no era una coda; Así comenzó una nueva sílaba.
@@ -284,7 +285,7 @@ label.oncstionsetrepairnotapplynoprevioussyllable=No se pudo aplicar un filtro d
 label.oncstionsetrepairnotapplynotgoinprevioussyllable=No se pudo aplicar un filtro de reparación de inicio porque no podía ir en la sílaba anterior: {0}
 label.oncstionsetrepairnotapplyonsetrequiredbutwontbeone=No se pudo aplicar un filtro de reparación de inicio porque se requerirá un inicio pero no habría uno: {0}
 label.oncstionsetrequiredbutsegmentnotanonset=Se requieren onsets pero el segmento 1 no fue un onset.
-label.oncstionsettemplateapplied=Una plantilla de inicio aplicada: {0}
+label.oncstionsettemplatematched=Una plantilla de inicio coincidente: {0}
 label.oncstirimefilterfailed=Un filtro de rime falló: {0}
 label.oncstirimerepairnotapply=No se pudo aplicar un filtro de reparación de escarcha: {0}
 label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=El segmento 1 puede ser una coda o un onset, pero la Maximización de onset lo bloquea para que no sea una coda; comenzó una nueva sílaba.
