--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -268,6 +268,7 @@ label.oncstiaddingsyllabletoword=Added the syllable to the word.
 label.oncsticodafilterfailed=A coda filter failed: {0}
 label.oncsticodarepairapplied=A coda repair filter applied: {0}
 label.oncsticodarepairnotapply=A coda repair filter could not apply: {0}
+label.oncsticodatemplatematched=A coda template matched: {0}
 label.oncstiexpectednucleusnotfound=Expected segment 1 to be a nucleus but it was not.
 label.oncstiexpectednucleusorcodabutnotnucleusandcodasnotallowedstartnewsyllable=Expected segment 1 to be either a nucleus or a coda, but it was not a nucleus and, further, codas are not allowed; so started a new syllable.
 label.oncstiexpectednucleusorcodabutnotnucleusandnotcodastartnewsyllable=Expected segment 1 to be either a nucleus or a coda, but it was not a nucleus and was not a coda; so started a new syllable.
@@ -286,7 +287,7 @@ label.oncstionsetrepairnotapplynoprevioussyllable=An onset repair filter could n
 label.oncstionsetrepairnotapplynotgoinprevioussyllable=An onset repair filter could not apply because it could not go in the previous syllable: {0}
 label.oncstionsetrepairnotapplyonsetrequiredbutwontbeone=An onset repair filter could not apply because an onset will be required but there would not be one: {0}
 label.oncstionsetrequiredbutsegmentnotanonset=Onsets are required but segment 1 was not an onset.
-label.oncstionsettemplateapplied=An onset template applied: {0}
+label.oncstionsettemplatematched=An onset template matched: {0}
 label.oncstirimefilterfailed=A rime filter failed: {0}
 label.oncstirimerepairnotapply=A rime repair filter could not apply: {0}
 label.oncstisegmentiscodaoronsetbutonsetmaximizationblocksascodastartnewsyllable=Segment 1 could be either a coda or an onset, but Onset Maximization blocks it from being a coda; started a new syllable.
