Add ICU sorting ability, part 1

--- a/src/org/sil/syllableparser/resources/SyllableParser_en.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_en.properties
@@ -38,8 +38,8 @@ menu.remove=_Remove item
 menu.nextitem=Ne_xt item
 menu.previousitem=Pre_vious item
 #menu.language=_Language
-menu.vernacularfont=_Vernacular Font
-menu.analysisfont=_Analysis Font
+menu.vernacularfont=_Vernacular Writing System
+menu.analysisfont=_Analysis Writing System
 menu.parser=Pa_rser
 menu.tools=_Tools
 menu.tryaword=Try a Word
@@ -128,6 +128,7 @@ onc.view.environments=Environments
 # labels
 label.action=Action
 label.active=Active
+label.analysiswritingsystem=Analysis Writing System
 label.backupcomment=Enter a description for this backup: 
 label.backupdirectory=Backup directory: 
 label.backupproject=Back up this project
@@ -135,6 +136,8 @@ label.browse=Browse
 label.cancel=Cancel
 label.choosebackup=Choose a backup to restore:
 label.chooseclass=Choose class
+label.choosecolor=Choose color
+label.choosefont=Choose font information
 label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
@@ -142,6 +145,8 @@ label.choosesegments=Choose one or more segments
 label.choosesnc=Choose one or more segments and/or natural classes
 label.choosetype=Choose type
 label.close=Close
+label.code=Code
+label.color=Color
 label.correctsyllabification=Correct Syllable Breaks
 label.cvnaturalclassfailure=Failure: could not parse into natural classes; did find classes '{0}' covering graphemes '{1}'.
 label.cvsegmentfailure=Failure: could not parse into segments beginning at '{0}'.
@@ -161,6 +166,8 @@ label.filename=File Name
 label.filterrepresentation=Slots
 label.filters=Filters
 label.filtertype=Scope
+label.font=Font
+label.general=General
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
 label.hyphenationparametersindesign=InDesign (simple list)
@@ -195,6 +202,7 @@ label.parsertree=Tree Diagram
 label.predictedsyllabification=Predicted Syllable Breaks
 label.restoreproject=Restore a Project
 label.results=Results:
+label.righttoleft=Right to left
 label.segment=Segment
 label.segmentinventory=Segment Inventory
 label.segmentornaturalclass=Segment or Natural Class
@@ -204,6 +212,8 @@ label.sethyphenationparameters=Set Hyphenation Parameters
 label.shsyllabificationfailure=Failure: could not parse segments into syllables
 label.sonorityhierarchy=Sonority Hierarchy
 label.oncsyllabificationfailure=Failure: could not parse segments into syllables
+label.sort=Sort
+label.sorting=Sorting
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
@@ -213,6 +223,7 @@ label.templatetype=Type
 label.tryaword=Try a Word
 label.tryit=Try it
 label.untested=Untested
+label.vernacularwritingsystem=Vernacular Writing System
 label.word=Word
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.comment=Comment
@@ -472,3 +483,9 @@ templatefiltersyntaxerror.slot_position_needs_segment_or_class_before_it=The slo
 templatefiltersyntaxerror.unknown=Unknown error in template or filter description; detected at or about position {0}.
 templatefiltersyntaxerror.unknownsegment=Unrecognized segment beginning at '{0}' in template or filter description.
 templatefiltersyntaxerror.unknownnaturalclass=Unrecognized natural class '{0}' in template or filter description.
+
+#Language sorting options
+language.sortingoption.custom_icu_rules=Custom ICU rules
+language.sortingoption.default_order=Default order
+language.sortingoption.same_as_another_language=Same as another language
+language.sortingoption.use_ldml_file=Use LDML file
