--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -38,8 +38,8 @@ menu.remove=_Remover Ítem
 menu.nextitem=Ítem proximo
 menu.previousitem=Ítem anterior
 #menu.language=_Lengua
-menu.vernacularfont=Fuente _Vernacular
-menu.analysisfont=Fuente _Analítica
+menu.vernacularfont=Sistema de escritura _vernáculo
+menu.analysisfont=Sistema de escritura de _análisis
 menu.parser=Analizado_r
 menu.tools=_Herramientas
 menu.syllabifywords=_Analizar todas las palabras
@@ -127,6 +127,7 @@ onc.view.environments=Entornos
 
 #labels
 label.action=Acción
+label.analysiswritingsystem=Sistema de escritura de análisis
 label.backupproject=Respaldar este proyecto
 label.segmentinventory=Inventorio de segmentos
 label.segment=Segmento
@@ -141,6 +142,11 @@ label.segmentornaturalclass=Segmento o Clase Naturale
 label.syllablepatterns=Modelo de Sílabas
 label.name=Nombre
 label.cancel=Cancelar
+label.code=Código
+label.color=Color
+label.font=Fuente
+label.general=General
+label.righttoleft=Derecha a izquierda
 label.help=Ayuda
 label.hyphenationparameters=Parámetros de palabras con guiones para {0}
 label.hyphenationparametersindesign=InDesign (simple list)
@@ -161,12 +167,15 @@ label.backupdirectory=Carpeta de archivos de respalda:
 label.browse=Buscar
 label.choosebackup=Seleccionar un archivo de respalda para restaurar:
 label.chooseclass=Seleccionar clase
+label.choosecolor=Seleccionar color
+label.choosefont=Seleccionar la información de la fuente
 label.choosegnc=Seleccionar uno o más grafemas y/o clases naturales de grafemas
 label.choosenc=Seleccionar uno o más clases naturales
 label.choosetype=Seleccionar un tipo
 label.filename=Nombre del archivo
 label.choosesegmnts=Seleccionar uno o más segmentos
 label.choosesnc=Seleccionar uno o más segmentos y/o clases naturales
+label.vernacularwritingsystem=Sistema de escritura vernáculo
 label.word=Palabra
 label.words=Palabras
 label.comment=Commentario
@@ -234,6 +243,8 @@ label.tryaword=Prueba una palabra
 label.tryit=Intentalo
 label.wordtotry=Palabra para intentar: 
 label.sonorityhierarchy=Jerarquía de sonoridad
+label.sort=Ordenar
+label.sorting=Ordenar
 label.comparesyllabifications=Comparar los resultados de sílabas entre los enfoques
 label.usecvapproach=Usa el enfoque de CV
 label.useshapproach=Usa el enfoque SH
@@ -472,3 +483,9 @@ templatefiltersyntaxerror.slot_position_needs_segment_or_class_before_it=El indi
 templatefiltersyntaxerror.unknown=Error desconocido en la descripción de plantilla o filtro; detectado en o sobre la posición {0}.
 templatefiltersyntaxerror.unknownsegment=Segmento no reconocido que comienza en '{0}' en la descripción de la plantilla o del filtro.
 templatefiltersyntaxerror.unknownnaturalclass=Clase natural no reconocida '{0}' en la descripción de la plantilla o del filtro.
+
+#Language sorting options
+language.sortingoption.custom_icu_rules=Reglas personalizadas de la UCI
+language.sortingoption.default_order=Orden predeterminada
+language.sortingoption.same_as_another_language=Igual que en otro idioma
+language.sortingoption.use_ldml_file=Usar archivo LDML
