--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -38,8 +38,8 @@ menu.remove=_Supprimer point
 menu.nextitem=Ne_xt item
 menu.previousitem=Pre_vious item
 #menu.language=_Language
-menu.vernacularfont=Police _vernaculaire
-menu.analysisfont=Police d\u2019_analyse
+menu.vernacularfont=Système d'écriture _vernaculaire
+menu.analysisfont=Système d'écriture d\u2019_analyse
 menu.parser=_Analyseur
 menu.tools=_Outils
 menu.tryaword=Essayer un mot
@@ -128,6 +128,7 @@ onc.view.environments=Environnements
 # labels
 label.action=Action
 label.active=Actif
+label.analysiswritingsystem=Système d'écriture d\u2019analyse
 label.backupcomment=Entrez une description pour cette sauvegarde: 
 label.backupdirectory=Répertoire des sauvegardes: 
 label.backupproject=Sauvegarder ce projet
@@ -135,12 +136,16 @@ label.browse=Naviguer
 label.cancel=Annuler
 label.choosebackup=Choisir une sauvegarde à restaurer:
 label.chooseclass=Choisir classe
+label.choosecolor=Choisir color
+label.choosefont=Choose font information
 label.choosegnc=Choisir un graphèmes et/ou classe naturelle de graphème ou plusieurs
 label.choosenc=Choisir une classe naturelle ou plusieurs
 label.choosepredicted=Choisir quelles syllabifications prédites à convertir en syllabification correcte
 label.choosesegments=Choisir un segment ou plusieurs
 label.choosesnc=Choisir un segment et/ou classe naturelle ou plusieurs
 label.choosetype=Choose type
+label.code=Code
+label.color=Couleur
 label.close=Fermer
 label.correctsyllabification=Corriger ruptures syllabiques
 label.cvnaturalclassfailure=Echec: impossible d\u2019analyser en classes naturelles; classes non trouvées '{0}' pour graphèmes '{1}'.
@@ -161,6 +166,8 @@ label.filterrepresentation=Slots
 label.filters=Filters
 label.filtertype=Scope
 label.filename=Nom de Fichier
+label.font=Police
+label.general=General
 label.help=Aide
 label.hyphenationparameters=Paramètres d\u2019usage de traits d\u2019union pour {0}
 label.hyphenationparametersindesign=InDesign (liste simple)
@@ -195,6 +202,7 @@ label.parsertree=Diagramme d'arbre
 label.predictedsyllabification=Ruptures syllabiques prédites
 label.restoreproject=Restaurer projet
 label.results=Résultats:
+label.righttoleft=Right to left
 label.segment=Segment
 label.segmentinventory=Liste des segments
 label.segmentornaturalclass=Segment ou classe naturelle 
@@ -204,6 +212,8 @@ label.sethyphenationparameters=Choisir paramètres d\u2019usage de traits d\u2019
 label.shsyllabificationfailure=Failure: could not parse segments into syllables
 label.sonorityhierarchy=Sonority Hierarchy
 label.oncsyllabificationfailure=Failure: could not parse segments into syllables
+label.sort=Sort
+label.sorting=Sorting
 label.success=Succès
 label.syllabifying=Syllabisant: 
 label.syllablepatterns=Modèles de syllabes
@@ -213,6 +223,7 @@ label.templatetype=Type
 label.tryaword=Essayer un mot
 label.tryit=Essayer
 label.untested=Pas vérifié
+label.vernacularwritingsystem=Système d'écriture vernaculaire
 label.word=Mot
 label.wordpredictedvscorrect=Syllabification prédite versus syllabification correcte
 label.comment=Comment
@@ -475,3 +486,9 @@ templatefiltersyntaxerror.slot_position_needs_segment_or_class_before_it=The slo
 templatefiltersyntaxerror.unknown=Unknown error in template or filter description; detected at or about position {0}.
 templatefiltersyntaxerror.unknownsegment=Unrecognized segment beginning at '{0}' in template or filter description.
 templatefiltersyntaxerror.unknownnaturalclass=Unrecognized natural class '{0}' in template or filter description.
+
+#Language sorting options
+language.sortingoption.custom_icu_rules=Custom ICU rules
+language.sortingoption.default_order=Default order
+language.sortingoption.same_as_another_language=Same as another language
+language.sortingoption.use_ldml_file=Use LDML file
