Add ICU sorting ability, part 3

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -183,6 +183,8 @@ label.predictedsyllabification=Silabificación Predicada
 label.correctsyllabification=Silabificación Correcta
 label.discussion=Discussión
 label.backupcomment=Teclar una descripción para este backup:
+label.icurules=Reglas de la UCI para usar:
+label.languagetouse=Idioma a utilizar:
 label.importing=Importar: 
 label.importingcanceled=Es: Importing canceled!
 label.importparatextcharacters=Importar segmentos (carácteres) desde ParaTExt 7 archivo .lds.\nEsto eliminará todos los segmentos actuales, incluyendo aquellos definidos en las Clases Naturales CV.\n\nLe sugerimos hacer una copia de seguridad antes de hacer esto.
