--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -176,6 +176,7 @@ label.hyphenationparametersxlingpaper=XLingPaper (fichier d\u2019exceptions d\u2
 label.discretionaryhyphen=Trait(s) d\u2019union Discrétionnaire(s):
 label.hyphenationstartsafter=Usage des traits d\u2019union commence après tant de caractères depuis le début:
 label.hyphenationstopsbefore=Usage des traits d\u2019union s\u2019arrête après tant de caractères de la fin:
+label.icurules=ICU rules to use :
 label.importing=Importation: 
 label.importingcanceled=Importation annulée!
 label.importparatextcharacters=Importer segments (caractères) de fichier ParaTExt 7 .lds.\nCeci enlèvera tous les segments actuels, y compris ceux définis pans les in the Classes Naturelles CV.\n\nOn vous conseille de faire une sauvegarde avant de faire ceci.
@@ -186,6 +187,7 @@ label.backupnowbeforeimport=Voulez-vous faire une sauvegarde maintenant?\n(Oui v
 label.graphemenaturalclass=Graphème classe naturelle 
 label.graphemesandnaturalclasses=Gra. ou NC 
 label.graphemeornaturalclass=Graphème ou classe naturelle 
+label.languagetouse=Language to use :
 label.name=Nom
 label.naturalclasses=Classes naturelles
 label.no=Non
