Add ICU sorting ability, part 4

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -73,6 +73,7 @@ file.exportedhyphenationlistfilterdescription=Archivos de separación silábica
 file.xlingpaperhyphenationexceptionfilterdescription=Archivos de excepciones de separación silábica para el programa XLingPaper 
 file.requiresaveheader=¡Importante!
 file.requiresavecontent=Favor de guardar el archivo.
+file.ldmlfilterdescription=Archivos LDML
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Selecionar el lengua del interfaz
