--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -73,6 +73,7 @@ file.exportedhyphenationlistfilterdescription=fichiers d\u2019usage de traits d\
 file.xlingpaperhyphenationexceptionfilterdescription=fichiers XLingPaper d\u2019exceptions d\u2019usage des traits d\u2019union
 file.requiresaveheader=Important!
 file.requiresavecontent=Enregistrer le fichier svp.
+file.ldmlfilterdescription=Fichiers LDML
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Choisir langue d\u2019interface
