Add ICU sorting ability, part 5

--- a/src/org/sil/syllableparser/resources/SyllableParser_es.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_es.properties
@@ -195,6 +195,7 @@ label.backupnowbeforeclearwords=¿Quieres hacer una copia de seguridad ahora?\n(S
 label.backupnowbeforeimport=¿Quieres hacer una copia de seguridad ahora? \n(Sí le permitirá hacer una copia de seguridad y luego hacer la importación.\nNo hará la importación sin copia de seguridad en primer lugar.\nCancelar la salida.)
 label.environmentrepresentation=Entorno
 label.environments=Entornos
+label.errorinicurules=Error en las reglas de la UCI en el signo de exclamación (!)
 label.exporting=Exporting: 
 label.exportingcanceled=Es: Exporting canceled!
 label.filterrepresentation=Ranuras
