--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -161,6 +161,7 @@ label.description=Description
 label.discussion=Discussion
 label.environmentrepresentation=Environnent
 label.environments=Environnements
+label.errorinicurules=Error in ICU rules at the exclamation mark (!)
 label.exporting=Exportation en cours: 
 label.exportingcanceled=Exportation annulée!
 label.filterrepresentation=Slots
