Get color, font and node orientation to work in the basic UI

--- a/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser_fr.properties
@@ -206,7 +206,7 @@ label.parsertree=Diagramme d'arbre
 label.predictedsyllabification=Ruptures syllabiques prédites
 label.restoreproject=Restaurer projet
 label.results=Résultats:
-label.righttoleft=Right to left
+label.righttoleft=Right-to-left
 label.segment=Segment
 label.segmentinventory=Liste des segments
 label.segmentornaturalclass=Segment ou classe naturelle 
